--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
         <artifactId>webdrivermanager</artifactId>
         <version>5.0.3</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path -->
+    <dependency>
+        <groupId>com.jayway.jsonpath</groupId>
+        <artifactId>json-path</artifactId>
+        <version>2.8.0</version>
+    </dependency>
 
 
 </dependencies>
