--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ buildNumber.properties
 .classpath
 test/driver
 # End of https://www.toptal.com/developers/gitignteore/api/java,maven
+/src/test/driver/
