--- a/pom.xml
+++ b/pom.xml
@@ -11,26 +11,30 @@
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <selenium.version>4.13.0</selenium.version>
+        <junit.version>4.13.2</junit.version>
+        <webdriver.manager.version>5.6.2</webdriver.manager.version>
+        <slf4j.version>2.0.9</slf4j.version>
     </properties>
 <dependencies>
     <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
     <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
         <artifactId>selenium-java</artifactId>
-        <version>4.13.0</version>
+        <version>${selenium.version}</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/junit/junit -->
     <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <version>4.13.2</version>
+        <version>${junit.version}</version>
         <scope>test</scope>
     </dependency>
     <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
     <dependency>
         <groupId>io.github.bonigarcia</groupId>
         <artifactId>webdrivermanager</artifactId>
-        <version>5.6.2</version>
+        <version>${webdriver.manager.version}</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path -->
     <dependency>
@@ -38,6 +42,21 @@
         <artifactId>json-path</artifactId>
         <version>2.8.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>${slf4j.version}</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-simple</artifactId>
+        <version>${slf4j.version}</version>
+        <scope>test</scope>
+    </dependency>
+
+
 
 
 </dependencies>
